# ezfinpy

./: pyproject.toml  requirements.txt
ezfinpy/: __init__.py  pandas_patcher.py  simulator.py  stats.py  utils.py
